# django_docker_ts

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
djangots/: asgi.py  settings.py  urls.py  wsgi.py
pgconnect/: apps.py
